...
                }
            }

            Spacer(modifier = Modifier.height(16.dp))

            AuthButton(
                text = "Iniciar Sesión",
                onClick = {
                    celularError = celular.isBlank()
                    contrasenaError = contrasena.isBlank()

                    if (!celularError && !contrasenaError) {
                        onLoginClick()
...
